[gd_scene load_steps=2 format=3 uid="uid://cc5fynsretk25"]

[ext_resource type="Script" uid="uid://chtfnua2h75wq" path="res://Scripts/MainMenu.gd" id="1_yn12e"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("catalog_button", "settings_button", "quit_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yn12e")
catalog_button = NodePath("VBoxContainer/catalog_button")
settings_button = NodePath("VBoxContainer/settings_button")
quit_button = NodePath("VBoxContainer/quit_button")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 716.0
offset_top = 43.0
offset_right = 1146.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 42
text = "Karaoke The Game"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 252.0
offset_right = 700.0
offset_bottom = 925.0
theme_override_constants/separation = 40

[node name="catalog_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/catalog_button"]
layout_mode = 0
offset_left = 216.0
offset_top = 17.0
offset_right = 399.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 24
text = "Choose da Song
"

[node name="prepare_da_song_btn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Prepare da Song"

[node name="settings_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="quit_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/quit_button"]
layout_mode = 0
offset_left = 284.0
offset_top = 19.0
offset_right = 326.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 24
text = "Exit"

[connection signal="pressed" from="VBoxContainer/catalog_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/prepare_da_song_btn" to="." method="_on_prepare_da_song_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/settings_button" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_button" to="." method="_on_button_4_pressed"]
